--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+    <div class="logo-matrix">
+      <img class="logo-matrix-img" src="./eisenhower-matrix.jpg">
       <a 
-          class="more_inf" 
+          class="logo-matrix-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <input id="new-task" type="text">
         <button>Add</button>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -37,7 +37,7 @@
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
