--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-page">
+      <p id="adding-element">
         <label for="new-task">Add Item</label>
         <input id="new-task" type="text">
         <button>Add</button>
@@ -40,7 +40,7 @@
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <input type="text" value="go shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
