--- a/index.html
+++ b/index.html
@@ -12,48 +12,48 @@
         charset="utf-8">
   </head>
   <body>
-    <div class="logo-matrix">
-      <img class="logo-matrix-img" src="./eisenhower-matrix.jpg">
+    <div class="logo">
+      <img class="logo-img" src="./eisenhower-matrix.jpg">
       <a 
-          class="logo-matrix-info" 
+          class="logo-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
-    <div class="main-page">
-      <p id="adding-element">
-        <label for="new-task">Add Item</label>
-        <input id="new-task" type="text">
+    <div class="content">
+      <p id="create">
+        <label for="task">Add Item</label>
+        <input id="task" type="text">
         <button>Add</button>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incompleted">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text">
-          <button class="edit">Edit</button>
+          <button class="edit-btn">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="edit">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="go shopping" class="task">
-          <button class="edit">Save</button>
+          <button class="edit-btn">Save</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text">
-          <button class="edit">Edit</button>
+          <button class="edit-btn">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
