--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="body">
     <header class="logo">
-      <img class="logo-img" src="./eisenhower-matrix.jpg">
+      <img class="logo-img" src="./eisenhower-matrix.jpg" alt="logo">
       <a 
           class="logo-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -35,7 +35,7 @@
             <input type="text" class="text-input">
             <button class="edit-btn">Edit</button>
             <button class="delete">
-              <img class="remove" src="./remove.svg">
+              <img class="remove" src="./remove.svg" alt="delete">
             </button>
           </li>
           <li class="item edit">
@@ -44,7 +44,7 @@
             <input type="text" value="go shopping" class="text-input">
             <button class="edit-btn">Save</button>
             <button class="delete">
-              <img class="remove" src="./remove.svg">
+              <img class="remove" src="./remove.svg" alt="delete">
             </button>
           </li>
         </ul>
@@ -56,7 +56,7 @@
             <input type="text" class="text-input">
             <button class="edit-btn">Edit</button>
             <button class="delete">
-              <img class="remove" src="./remove.svg">
+              <img class="remove" src="./remove.svg" alt="delete">
             </button>
           </li>
         </ul>
